# lazysvn

./: .gitignore  LICENSE  pyproject.toml
lazysvn/: app.py  changes_panel.py  commit_presenter.py  commit_view.py  diff_panel.py  log_presenter.py  log_view.py  staged_panel.py  status_presenter.py  status_view.py  svn_log_panel.py  svn_model.py  svn_status_panel.py  unstaged_panel.py
lazysvn/protocols/: log_panel.py  status_panel.py
